Thu Jan 12 17:09:18 2006  Søren Sandmann  <sandmann@redhat.com>

	* include/window.[ch]: Add new functions to enable and disable
	events on Map and Unmap. 

	* composite/compalloc.c: Use them here to make sure Composite
	redirect doesn't cause Map/UnmapNotify events that would confuse
	window managers. 

2006-01-11  Ian Romanick  <idr@us.ibm.com>

	reviewed by: airlied, krh

	* GL/glx/Makefile.am:
	* GL/glx/g_disptab.c:
	* GL/glx/g_disptab.h:
	* GL/glx/g_disptab_EXT.c:
	* GL/glx/g_disptab_EXT.h:
	* GL/glx/g_render.c:
	* GL/glx/g_renderswap.c:
	* GL/glx/g_single.c:
	* GL/glx/g_singleswap.c:
	* GL/glx/glxcmds.c: (DoMakeCurrent), (__glXWaitGL),
	(__glXCopyContext), (__glXSwapBuffers), (__glXVendorPrivate):
	* GL/glx/glxcmdsswap.c: (__glXSwapVendorPrivate):
	* GL/glx/glxserver.h:
	* GL/glx/impsize.h:
	* GL/glx/indirect_dispatch.c: (__glXDisp_NewList),
	(__glXDisp_EndList), (__glXDisp_CallList), (__glXDisp_CallLists),
	(__glXDisp_DeleteLists), (__glXDisp_GenLists),
	(__glXDisp_ListBase), (__glXDisp_Begin), (__glXDisp_Bitmap),
	(__glXDisp_Color3bv), (__glXDisp_Color3dv), (__glXDisp_Color3fv),
	(__glXDisp_Color3iv), (__glXDisp_Color3sv), (__glXDisp_Color3ubv),
	(__glXDisp_Color3uiv), (__glXDisp_Color3usv), (__glXDisp_Color4bv),
	(__glXDisp_Color4dv), (__glXDisp_Color4fv), (__glXDisp_Color4iv),
	(__glXDisp_Color4sv), (__glXDisp_Color4ubv), (__glXDisp_Color4uiv),
	(__glXDisp_Color4usv), (__glXDisp_EdgeFlagv), (__glXDisp_End),
	(__glXDisp_Indexdv), (__glXDisp_Indexfv), (__glXDisp_Indexiv),
	(__glXDisp_Indexsv), (__glXDisp_Normal3bv), (__glXDisp_Normal3dv),
	(__glXDisp_Normal3fv), (__glXDisp_Normal3iv),
	(__glXDisp_Normal3sv), (__glXDisp_RasterPos2dv),
	(__glXDisp_RasterPos2fv), (__glXDisp_RasterPos2iv),
	(__glXDisp_RasterPos2sv), (__glXDisp_RasterPos3dv),
	(__glXDisp_RasterPos3fv), (__glXDisp_RasterPos3iv),
	(__glXDisp_RasterPos3sv), (__glXDisp_RasterPos4dv),
	(__glXDisp_RasterPos4fv), (__glXDisp_RasterPos4iv),